# CapstoneFinal

STM32SerialRoverInterface-master/: .project
STM32SerialRoverInterface-master/MotorEncoder/: .cproject  .project  MotorEncoder Debug.launch  MotorEncoder.ioc
STM32SerialRoverInterface-master/MotorEncoder/Core/Inc/: stm32f4xx_it.h
STM32SerialRoverInterface-master/MotorEncoder/Core/Src/: main.c  stm32f4xx_hal_msp.c  stm32f4xx_it.c
STM32SerialRoverInterface-master/MotorEncoder/Debug/: MotorEncoder.elf  MotorEncoder.list  MotorEncoder.map  makefile
STM32SerialRoverInterface-master/MotorEncoder/Debug/Core/Src/: main.su  stm32f4xx_hal_msp.su  stm32f4xx_it.su
Tennis_Bot/: .gitignore  .gitmodules  Dockerfile  Readme.md  cmd.txt  docker_build.sh  docker_connect.sh  docker_exec.sh  docker_run.sh  full_bot.py
Tennis_Bot/config/: manual_params.yaml  path_plan_params.yaml
Tennis_Bot/src/tennis_pal_bringup/: CMakeLists.txt  package.xml
Tennis_Bot/src/tennis_pal_bringup/launch/: control_test.launch.py  detection-uart.launch.py  full_bot.py
uart-bridge/: CMakeLists.txt  README.md  package.xml
uart-bridge/include/uart-bridge/: uart-bridge.hpp
uart-bridge/src/: uart-bridge.cpp
